src/test/compile-fail/writing-to-immutable-vec.rs
// error-pattern:assignment to immutable vec content
fn main() { let v: [int] = [1, 2, 3]; v[1] = 4; }
